# TimeInData

./: .dockerignore  .gitignore  README.md  docker-compose.traefik.yaml  docker-compose.yaml  main.py  requirements.txt
api/: app.py  config.py  database.py  dependencies.py  schemas.py
api/database/: func.py  repositories.py  session_manager.py
api/routers/: __init__.py  users.py
api_service/: Dockerfile  app.py  config.py  dependencies.py  pyproject.toml  requirements.txt  schemas.py
api_service/database/: models.py  repositories.py  session_manager.py
api_service/logger/: log_conf.py
api_service/migrations/: env.py
api_service/migrations/versions/: ce55c6ad0783_add_time_zone_delta_field_for_user.py  e7335a3f2ef7_add_unique_constraint_and_change_.py
api_service/routers/: __init__.py  healthcheck.py  users.py
api_service/tests/: conftest.py
api_service/tests/database_repo/: test_users.py
api_service/tests/utils/: activity.py  user.py  utils.py
celery_service/: Dockerfile  celery.py  config.py  main.py  requirements.txt  tasks.py
database/: __init__.py  models.py  repositories.py  setup.py
frontend_service/: .env.production  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend_service/src/: main.tsx  mockEnv.ts
logger/: config.json  config.py  logger.py
migrations/: env.py
migrations/versions/: 9944e048a9da_initial_migration.py  bcf7105ce2e6_initial_migration.py  (+1 more)
tgbot/: APIParser.py  config.py  main.py
tgbot_service/: APIParser.py  Dockerfile  config.py  main.py  pre_start_tasks.py  requirements.txt
(+47 files in other folders)
